vignette horizontal scroll fix

--- a/Projet 6/style.css
+++ b/Projet 6/style.css
@@ -127,11 +127,11 @@ nav {
 
 .cadre-img {
     border: 1px solid red;
-    width: 100%;
+    min-width: 100%;
     height: 100%;
     display: flex;
     flex-shrink: 0;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
 .cadre-img img {
